--- a/templates/local_settings.py.j2
+++ b/templates/local_settings.py.j2
@@ -54,3 +54,4 @@ CATALOGUE = {
 
 MEDIA_ROOT = "/var/www/{{ app_name }}/uploaded"
 STATIC_ROOT = "/var/www/{{ app_name }}/static"
+ALLOWED_HOSTS = os.getenv('ALLOWED_HOSTS', ['localhost', '{{ server_name }}'])
