--- a/templates/default_oauth_apps.json.j2
+++ b/templates/default_oauth_apps.json.j2
@@ -10,6 +10,8 @@
         "client_type": "confidential",
         "client_id": "Jrchz2oPY3akmzndmgUTYrs9gczlgoV20YPSvqaV",
         "client_secret": "rCnp5txobUo83EpQEblM8fVj3QT5zb5qRfxNsuPzCqZaiRyIoxM4jdgMiZKFfePBHYXCLd7B8NlkfDBY9HKeIQPcy5Cp08KQNpRHQbjpLItDHv12GvkSeXp6OxaUETv3",
+        "created": "2019-04-10",
+        "updated": "2019-04-10",
         "user": [
             "admin"
         ]
